[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "libmultisense"
version = "7.0.0"
description="LibMultiSense python package wrapped using pybind11"
readme = "README.md"
authors = [
  { name = "Matt Alvarado", email = "support@carnegierobotics.com" },
]

requires-python = ">=3.8"

[tool.scikit-build.cmake]
args = ["-DBUILD_PYTHON_BINDINGS=ON", "-DBUILD_JSON_SERIALIZATION=ON", "-DBUILD_SHARED_LIBS=OFF", "-DBUILD_LEGACY_API=OFF"]

[project.urls]
Homepage = "https://github.com/carnegierobotics/libmultisense"
Issues = "https://github.com/carnegierobotics/libmultisense/issues"
