[build-system]
requires = ["scikit-build-core>=0.11.1", "pybind11", "packaging>=24.2"]
build-backend = "scikit_build_core.build"

[project]
name = "libmultisense"
version = "7.5.0"
description="LibMultiSense python package wrapped using pybind11"
readme = "README.md"
authors = [
  { name = "Matt Alvarado", email = "support@carnegierobotics.com" },
]

requires-python = ">=3.8"

[tool.scikit-build.cmake]
args = ["-DBUILD_PYTHON_BINDINGS=ON", "-DBUILD_JSON_SERIALIZATION=ON", "-DBUILD_SHARED_LIBS=OFF", "-DBUILD_LEGACY_API=OFF"]

[project.urls]
Homepage = "https://github.com/carnegierobotics/libmultisense"
Issues = "https://github.com/carnegierobotics/libmultisense/issues"

[project.scripts]
multisense_change_ip_utility = "libmultisense.utilities.change_ip_utility:main"
multisense_device_info_utility = "libmultisense.utilities.device_info_utility:main"
multisense_image_cal_utility = "libmultisense.utilities.image_cal_utility:main"
multisense_multi_channel_utility = "libmultisense.utilities.multi_channel_utility:main"
multisense_point_cloud_utility = "libmultisense.utilities.point_cloud_utility:main"
multisense_ptp_utility = "libmultisense.utilities.ptp_utility:main"
multisense_rectified_focal_length_utility = "libmultisense.utilities.rectified_focal_length_utility:main"
multisense_save_image_utility = "libmultisense.utilities.save_image_utility:main"
multisense_version_info_utility = "libmultisense.utilities.version_info_utility:main"
multisense_feature_detectorutility = "libmultisense.utilities.feature_detector_utility:main"
