[package]
name = "mswebrtc"
version = "0.1.0"
edition = "2021"

[lib]
name = "mswebrtc"
crate-type = ["staticlib"]

[dependencies]
qocrlif = { git = "ssh://git@github.com/carnegierobotics/qocrlif.git", rev = "cfc4a40acf1a90ea48a20655c92d917d3ed98e6a" }
fragunfrag = { git = "ssh://git@github.com/carnegierobotics/fragunfrag.git", rev = "0f9ba8fb1cb0ed14cb154f694b6cc558d7720a3d" }
str0m = "0.9.0"
systemstat = "0.1.6"
reqwest = {version="0.12.12", features=["blocking"]}
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

[build-dependencies]
cbindgen = "0.12"
uuid = {version="1.16", features=["v4"]}
